[gd_scene load_steps=5 format=3 uid="uid://combhw38yi136"]

[ext_resource type="Script" uid="uid://dhy8bkevmyie6" path="res://main.gd" id="1_h2yge"]
[ext_resource type="FontFile" uid="uid://dibhmjo2kj7xj" path="res://ttf/FiraCode-Regular.ttf" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://cxru2pwrrisbe" path="res://filesys.gd" id="3_h2yge"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7dm0k"]
bg_color = Color(0.413329, 0.406435, 0.313959, 1)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_h2yge")

[node name="Panel" type="Panel" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7dm0k")

[node name="MenuBar" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 32.0
color = Color(0.634309, 0.573075, 0.408437, 1)

[node name="CodeInterface" type="CodeEdit" parent="."]
offset_left = 232.0
offset_top = 40.0
offset_right = 1144.0
offset_bottom = 640.0
theme_override_colors/background_color = Color(0.639216, 0.647059, 0.517647, 1)
theme_override_colors/font_color = Color(0.054902, 0.054902, 0.0627451, 1)
theme_override_fonts/font = ExtResource("1_ig7tw")
theme_override_font_sizes/font_size = 18
theme_override_colors/line_number_color = Color(0.287295, 0.287295, 0.287295, 1)
draw_tabs = true
gutters_draw_line_numbers = true
indent_automatic = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[node name="FileManager" type="ColorRect" parent="."]
offset_top = 32.0
offset_right = 224.0
offset_bottom = 648.0
color = Color(0.880345, 0.837434, 0.722247, 1)

[node name="Fișier" type="MenuButton" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 48.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(0.0555204, 0.0555206, 0.0634074, 1)
theme_override_font_sizes/font_size = 10
text = "File"

[node name="Afișare" type="MenuButton" parent="."]
offset_left = 52.0
offset_top = 4.0
offset_right = 96.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(0.0555204, 0.0555206, 0.0634074, 1)
theme_override_font_sizes/font_size = 10
text = "Editor"

[node name="Run" type="MenuButton" parent="."]
offset_left = 100.0
offset_top = 4.0
offset_right = 144.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(0.0555204, 0.0555206, 0.0634074, 1)
theme_override_font_sizes/font_size = 10
text = "Run"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 10.0
offset_top = 40.0
offset_right = 214.0
offset_bottom = 640.0
script = ExtResource("3_h2yge")

[node name="Tree" type="Tree" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewProject" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 2
ok_button_text = "Select Current Folder"
dialog_hide_on_ok = true
dialog_autowrap = true
file_mode = 2
access = 2

[connection signal="dir_selected" from="NewProject" to="." method="_on_new_project_dir_selected"]
